--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "firebase": "^9.6.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^5.1.1",
+    "react-redux-firebase": "^2.4.1",
     "react-router-dom": "^6.1.0",
     "react-scripts": "4.0.3",
     "redux": "^4.1.2",
+    "redux-firestore": "^0.9.0",
     "redux-thunk": "^2.4.1",
     "web-vitals": "^1.0.1"
   },
@@ -38,5 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "yarnlock-dedupe-check": "^2.1.1"
   }
 }
